login page is trying to fix 1

--- a/templates/account/email/email_confirmation_message.html
+++ b/templates/account/email/email_confirmation_message.html
@@ -5,7 +5,7 @@
     <title>Email Confirmation</title>
     <style>
         body {
-            background: #eef2ff;
+            background: #3c4769;
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 25px 0;
